src/test/deca/context/valid/sansObjet/CastFloat.deca
{
float i = 2;
//int f = (int) (i) + 2;
//f = f + (float)(i);
print((int)(i));
}
