src/test/deca/context/invalid/sansObjet/while_inval.deca
{
	while(3+5)
	{
		print("hello");
	}
}
